Adds Edit button

--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,16 +1,17 @@
 ﻿@model List<invoice_master.Models.Product>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Product Page";
 }
 
 <table class="table">
-    <thead>
+    <thead class="thead-dark">
         <tr>
-            <th scope="col">#</th>
+            <th scope="col">Product No</th>
             <th scope="col">Product Name</th>
             <th scope="col">Product Price</th>
             <th scope="col">Product Description</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
@@ -21,12 +22,8 @@
                 <td>@product.Name</td>
                 <td>£ @product.Price</td>
                 <td>@product.Description</td>
+                <td><button class="btn btn-success" href="/Prodicts/View/@product.Id">View</button></td>
             </tr>
         }
     </tbody>
 </table>
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
