--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@product.Name</td>
                 <td>£ @product.Price</td>
                 <td>@product.Description</td>
-                <td><button class="btn btn-success" href="/Prodicts/View/@product.Id">View</button></td>
+                <td><a class="btn btn-success" href="/Products/Update/@product.Id">View</a></td>
             </tr>
         }
     </tbody>
