--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,29 +1,46 @@
 ﻿@model List<invoice_master.Models.Product>
-
-@{
-    ViewData["Title"] = "Product Page";
+ @{
+    ViewBag.Title = "Product";
 }
 
+<h2>Products</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 <table class="table">
-    <thead class="thead-dark">
+    <tr>
+        <th>
+            Product Name
+        </th>
+        <th>
+            Price
+        </th>
+        <th>
+            Description
+        </th>
+        <th></th>
+    </tr>
+
+
+    @foreach (var item in Model)
+    {
         <tr>
-            <th scope="col">Product No</th>
-            <th scope="col">Product Name</th>
-            <th scope="col">Product Price</th>
-            <th scope="col">Product Description</th>
-            <th scope="col"></th>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
         </tr>
-    </thead>
-    <tbody>
-        @foreach (var product in Model)
-        {
-            <tr>
-                <th scope="row">@product.Id</th>
-                <td>@product.Name</td>
-                <td>£ @product.Price</td>
-                <td>@product.Description</td>
-                <td><a class="btn btn-success" href="/Products/Update/@product.Id">View</a></td>
-            </tr>
-        }
-    </tbody>
+    }
+
 </table>
