--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-  <h2 class="mb-2">Add a Product</h2>
+  <h2 class="mb-2">Edit Product</h2>
   <div class="row my-5">
     <div class="col-md-6">
       <form method="post" asp-action="Edit">
@@ -25,7 +25,7 @@
             rows="7"></textarea>
           <span asp-validation-for="Description" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary mt-4">Submit</button>
+        <button type="submit" class="btn btn-primary mt-4">Save</button>
       </form>
     </div>
   </div>
