--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -25,7 +25,7 @@
                         placeholder="Add Description...." rows="7"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary mt-4">Submit</button>
+                <button type="submit" class="btn btn-primary mt-4 d-flex">Add</button>
             </form>
         </div>
     </div>
