--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -11,17 +11,17 @@
             <form method="post" asp-action="Delete">
                 <div class="form-group mb-3">
                     <label for="name">Product Name</label>
-                    <input asp-for="Name" type="text" class="form-control" placeholder="name">
+                    <input readonly asp-for="Name" type="text" class="form-control" placeholder="name">
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
                     <label for="price">Product Price</label>
-                    <input asp-for="Price" type="number" class="form-control" placeholder="Price">
+                    <input readonly asp-for="Price" type="number" class="form-control" placeholder="Price">
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-3">
                     <label for="Description">Product Description</label>
-                    <textarea asp-for="Description" class="form-control" id="Description"
+                    <textarea readonly asp-for="Description" class="form-control" id="Description"
                         placeholder="Add Description...." rows="7"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
